--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.0.1",
 	"description": "InfoSec project for freeCodeCamp",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js"
 	},
 	"dependencies": {
 		"body-parser": "^1.15.2",
@@ -13,7 +14,11 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
-		"mocha": "^3.2.0"
+		"mocha": "^10.3.0",
+		"mongodb": "3.7",
+		"mongoose": "^8.1.1",
+		"node-fetch": "^3.3.2",
+		"nodemon": "^3.0.3"
 	},
 	"repository": {
 		"type": "git",
