--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "InfoSec project for freeCodeCamp",
 	"scripts": {
 		"start": "node server.js",
-		"dev": "nodemon server.js"
+		"dev": "nodemon server.js",
+		"test": "mocha --timeout 10000" 
 	},
 	"dependencies": {
 		"body-parser": "^1.15.2",
